--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="observacoes">Observações</string>
     <string name="opiniao">A tua opinião</string>
     <string name="fotos">Fotos</string>
-    <string name="ultimos_registos">Ultimos registos</string>
+    <string name="ultimos_registos">Últimos registos</string>
     <string name="filmes_mais_vistos">Filmes mais vistos</string>
     <string name="procurar">Procurar</string>
     <string name="pesquisa_por_atores">Pesquisa Por Atores</string>
